Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57747

[EGLFS] front windows paint window is not update properly

XMLWordPrintable

    • 94b136f320b7b84645cc59c89bea52e080fe3a2e 7980e92e8939ba7d737c618c95dcf6b750e65911

      When there is an another window in front of the mainwindow, parentless QWidget or from drag and drop when it is moved it is not updated correctly.
      It needs to be forced with update.
      It can reproduced with the attached code or with the [http://code.qt.io/cgit/qt/qtbas
      e.git/tree/examples/widgets/draganddrop/draggableicons]

        1. movingwindow.zip
          1 kB
          Karim Pinter
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            karimpinter Karim Pinter
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes